# wannabe-ssh

./: Cargo.toml  LICENSE  README.md
wannabe-daemon/: .gitignore  Cargo.toml  sample-config.toml
wannabe-daemon/src/: config.rs  main.rs
wannabe-server/: Cargo.toml  sample-config.toml
wannabe-server/site/: index.html  index.js
wannabe-server/src/: config.rs  main.rs
