[package]
name = "wannabe-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11.15", features = ["json"] }
ssh-key = { version = "0.6.3", features = ["rsa", "ed25519", "serde"] }
anyhow = "1.0.75"
toml = "0.8.8"
fast_websocket_client = "0.1.2"
notify-rust = "4.10.0"
