[package]
name = "wannabe-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
axum = { version = "0.6.12", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11.15", features = ["json"] }
json5 = "0.4.1"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
dotenvy = "0.15.7"
ulid = "1.1.0"
ssh-key = { version = "0.6.3", features = ["rsa", "ed25519", "serde"] }
anyhow = "1.0.75"
toml = "0.8.8"
tower-cookies = { version = "0.9.0", features = ["private"] }
once_cell = "1.18.0"
